pkgdatadir        = ${datadir}/@PACKAGE@/command
pkgdata_DATA =        \
	action.sh     \
	alias.sh      \
	break.sh      \
	commands.sh   \
	condition.sh  \
	continue.sh   \
	debug.sh      \
	delete.sh     \
	display.sh    \
	disable.sh    \
	down.sh       \
	edit.sh       \
	enable.sh     \
	eval.sh       \
	examine.sh    \
	file.sh       \
	finish.sh     \
	frame.sh      \
	handle.sh     \
	help.sh       \
	history.sh    \
	info.sh       \
	info_sub/args.sh      \
	info_sub/brkpts.sh    \
	info_sub/display.sh   \
	info_sub/files.sh     \
	info_sub/functions.sh \
	info_sub/program.sh   \
	info_sub/variables.sh \
	info_sub/warranty.sh  \
	kill.sh       \
	list.sh       \
	load.sh       \
	log.sh        \
	next.sh       \
	pwd.sh        \
	quit.sh       \
	restart.sh    \
	search.sh     \
	set.sh        \
	show.sh       \
	signal.sh     \
	source.sh     \
	step.sh       \
	tracefn.sh    \
	tty.sh	      \
	up.sh	      \
	undisplay.sh  \
	watch.sh      \
	where.sh

EXTRA_DIST = $(pkgdata_DATA)
