SUBDIRS           = info_sub
pkgdatadir        = ${datadir}/@PACKAGE@/command
pkgdata_DATA =        \
	action.sh     \
	alias.sh      \
	break.sh      \
	commands.sh   \
	condition.sh  \
	continue.sh   \
	debug.sh      \
	delete.sh     \
	display.sh    \
	disable.sh    \
	down.sh       \
	edit.sh       \
	enable.sh     \
	eval.sh       \
	examine.sh    \
	file.sh       \
	finish.sh     \
	frame.sh      \
	handle.sh     \
	help.sh       \
	history.sh    \
	info.sh       \
	kill.sh       \
	list.sh       \
	load.sh       \
	log.sh        \
	next.sh       \
	pwd.sh        \
	quit.sh       \
	restart.sh    \
	search.sh     \
	set.sh        \
	show.sh       \
	signal.sh     \
	source.sh     \
	step.sh       \
	tracefn.sh    \
	tty.sh	      \
	up.sh	      \
	undisplay.sh  \
	watch.sh      \
	where.sh

EXTRA_DIST = $(pkgdata_DATA)
