SUBDIRS           = info_sub set_sub show_sub
pkgdatadir        = ${datadir}/@PACKAGE@/command
pkgdata_DATA =        \
	action.sh     \
	alias.sh      \
	backtrace.sh  \
	break.sh      \
	commands.sh   \
	condition.sh  \
	continue.sh   \
	debug.sh      \
	delete.sh     \
	display.sh    \
	disable.sh    \
	down.sh       \
	edit.sh       \
	enable.sh     \
	eval.sh       \
	examine.sh    \
	export.sh     \
	file.sh       \
	finish.sh     \
	frame.sh      \
	handle.sh     \
	help.sh       \
	history.sh    \
	info.sh       \
	kill.sh       \
	list.sh       \
	load.sh       \
	log.sh        \
	next.sh       \
	pwd.sh        \
	quit.sh       \
	return.sh     \
	run.sh        \
	search.sh     \
	set.sh        \
	shell.sh      \
	show.sh       \
	signal.sh     \
	skip.sh       \
	source.sh     \
	step.sh       \
	trace.sh      \
	tty.sh	      \
	up.sh	      \
	undisplay.sh  \
	watch.sh

EXTRA_DIST = $(pkgdata_DATA)

MOSTLYCLEANFILES = *.orig *.rej
