pkgdatadir        = ${datadir}/@PACKAGE@/commands
pkgdata_DATA =      \
	backtrace.cmd \
	debug.cmd     \
	down.cmd      \
	eval.cmd      \
	examine.cmd   \
	file.cmd      \
	frame.cmd     \
	kill.cmd      \
	load.cmd      \
	print.cmd     \
	pwd.cmd       \
	quit.cmd      \
	restart.cmd   \
	source.cmd    \
	trace.cmd     \
	up.cmd        \
	tty.cmd

