pkgdatadir        = ${datadir}/@PACKAGE@/lib
pkgdata_DATA =      	\
	alias.sh    	\
	brk.sh    	\
	commands.sh  	\
	complete.sh  	\
	dbg-call.sh  	\
	file.sh  	\
	fns.sh  	\
	frame.sh        \
	help.sh    	\
	hist.sh    	\
	info.sh    	\
	journal.sh    	\
	list.sh    	\
	msg.sh    	\
	processor.sh  	\
	run.sh  	\
	save-restore.sh \
	sig.sh

EXTRA_DIST = $(pkgdata_DATA)
