pkgdatadir        = ${datadir}/@PACKAGE@/lib
pkgdata_DATA =      	\
	alias.sh    	\
	break.sh    	\
	columnize.sh  	\
	commands.sh  	\
	complete.sh  	\
	dbg-call.sh  	\
	file.sh  	\
	filecache.sh  	\
	fns.sh  	\
	frame.sh        \
	help.sh    	\
	hook.sh    	\
	hist.sh    	\
	info.sh    	\
	journal.sh    	\
	list.sh    	\
	sort.sh    	\
	msg.sh    	\
	processor.sh  	\
	run.sh  	\
	save-restore.sh \
	sig.sh

EXTRA_DIST = $(pkgdata_DATA)
