check_DATA = \
	action.cmd \
	action.right \
	brkpt1.cmd \
	brkpt1.right \
	brkpt2.cmd \
	brkpt2.right \
	brkpt3.cmd \
	brkpt3.right \
	bug-args.cmd \
	bug-args.right \
	bug-source.cmd \
	bug-source.right \
	bug-step.cmd \
	bug-step.right \
	bug-step-subshell.cmd \
	bug-step-subshell.right \
	bugIFS.cmd \
	bugIFS.right \
	command.cmd \
	command.right \
	complete.cmd \
	complete.right \
	continue.cmd \
	debug.cmd \
	debug.right \
	debug2.cmd \
	display.cmd \
	display.right \
	enable.cmd \
	enable.right \
	finish.cmd \
	finish.right \
	frame.cmd \
	frame.right \
	interrupt.right \
	list.cmd \
	list.right \
	lopts.right \
	misc-output.right \
	misc.cmd \
	misc.right \
	multi1.cmd \
	multi1.right \
	multi2.cmd \
	multi2.right \
	multi3.cmd \
	multi3.right \
	multi4.cmd \
	multi4.right \
	parm.cmd \
	parm.right \
	prof1.cmd \
	prof2.cmd \
	quit.cmd \
	restart.cmd \
	restart.right \
	restart2.cmd \
	search.cmd \
	search.right \
	setshow.cmd \
	setshow.right \
	settrace.cmd \
	settrace.right \
	sig.cmd \
	sig.right \
	sig-Darwin.right \
	skip.cmd \
	skip.right \
	sopts.right \
	subshell1.cmd \
	subshell1.right \
	subshell2.cmd \
	subshell2.right \
	subshell3.cmd \
	subshell3.right \
	subshell4.cmd \
	subshell4.right \
	tbreak.cmd \
	tbreak.right \
	trace.right \
	trace2.right \
	watch1.cmd \
	watch1.right \
	watch2.cmd \
	watch2.right

EXTRA_DIST = $(check_DATA) README
