# FIXME: we don't use a wildcard here because it messes up on
# file: file\ with\ spaces.cmd and file\ with\ spaces.right
check_DATA = \
	action.cmd \
	action.right \
	brkpt1.cmd \
	brkpt1.right \
	brkpt2.cmd \
	brkpt2.right \
	brkpt3.cmd \
	brkpt3.right \
	bug-args.cmd \
	bug-args.right \
	bug-break.cmd \
	bug-break.right \
	bug-clear.cmd \
	bug-clear.right \
	bug-loc.cmd \
	bug-loc.right \
	bug-source.cmd \
	bug-source.right \
	bug-step.cmd \
	bug-step.right \
	bug-step-subshell.cmd \
	bug-step-subshell.right \
	bugI.cmd \
	bugI.right \
	bugIFS.cmd \
	bugIFS.right \
	command.cmd \
	command.right \
	complete.cmd \
	complete.right \
	continue.cmd \
	debug.cmd \
	debug.right \
	debug2.cmd \
	delete.right \
	delete.cmd \
	display.cmd \
	display.right \
	enable.cmd \
	enable.right \
	export.cmd \
	export.right \
	finish.cmd \
	finish.right \
	frame.cmd \
	frame.right \
	info-args.cmd      \
	info-args.right    \
	interrupt.right \
	list.cmd \
	list.right \
	lopts.right \
	misc-output.right \
	misc-output-41.right \
	misc.cmd \
	misc.right \
	multi1.cmd \
	multi1.right \
	multi2.cmd \
	multi2.right \
	multi3.cmd \
	multi3.right \
	multi4.cmd \
	multi4.right \
	parm.cmd \
	parm.right \
	prof1.cmd \
	prof2.cmd \
	quit.cmd \
	restart.cmd \
	restart.right \
	restart2.cmd \
	search.cmd \
	search.right \
	setshow.cmd \
	setshow.right \
	settrace.cmd \
	settrace.right \
	sig.cmd \
	sig.right \
	sig-Darwin.right \
	sig-43.right \
	skip.cmd \
	skip.right \
	sopts.right \
	subshell1.cmd \
	subshell1.right \
	subshell2.cmd \
	subshell2.right \
	subshell3.cmd \
	subshell3.right \
	subshell4.cmd \
	subshell4.right \
	tbreak.cmd \
	tbreak.right \
	trace.right \
	trace2.right \
	watch1.cmd \
	watch1.right \
	watch2.cmd \
	watch2.right

EXTRA_DIST = $(check_DATA) README
MOSTLYCLEANFILES = *.orig *.rej
