check_DATA =            \
	bug-args.sh.in  \
	bug-step.sh     \
	bug-step-subshell.sh \
	bugI.sh         \
	bugIFS.sh.in    \
	dbg-test1.sh    \
	dbg-test1.sub   \
	dbg-test2.sh    \
	debug.sh        \
	hanoi.sh.in     \
	interrupt.sh.in \
	nexting.sh      \
	parm.sh         \
	restartbug.sh   \
	settrace.sh     \
	skip.sh         \
	subshell.sh

TESTS_ENVIRONMENT =      \
  srcdir="$(abs_srcdir)" \
  builddir="$(abs_builddir)"

abs_srcdir=@abs_srcdir@
abs_builddir=@abs_builddir@

EXTRA_DIST = $(check_DATA) README

